Increase review widget min-height to 400px to fix cutoff

--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ a.logo {
 
 /* Review Widget Fix */
 iframe.lc_reviews_widget {
-    min-height: 200px !important;
+    min-height: 400px !important;
     height: 100% !important;
 }
 
@@ -729,7 +729,7 @@ iframe {
     display: block;
     width: 100%;
     max-width: 100%;
-    min-height: 200px;
+    min-height: 400px;
     /* Force container height */
 }
 
